--- a/install
+++ b/install
@@ -20,4 +20,28 @@ fi
        apt-get autoremove -y
        apt-get autoremove -y
        apt-get autoclean -y
+       apt-get install -y apt-transport-https lsb-release ca-certificates
        set LC_ALL=en_US.UTF-8; export LC_ALL=en_US.UTF-8 # Docker FIX.
+       mkdir -p /etc/ssl/nginx
+       curl -s https://raw.githubusercontent.com/theraw/web-pro/master/plus/nginx-repo.crt > /etc/ssl/nginx/nginx-repo.crt
+       curl -s https://raw.githubusercontent.com/theraw/web-pro/master/plus/nginx-repo.key > /etc/ssl/nginx/nginx-repo.key
+       wget http://nginx.org/keys/nginx_signing.key && sudo apt-key add nginx_signing.key
+       printf "deb https://plus-pkgs.nginx.com/ubuntu `lsb_release -cs` nginx-plus\n" | sudo tee /etc/apt/sources.list.d/nginx-plus.list
+       wget -P /etc/apt/apt.conf.d https://cs.nginx.com/static/files/90nginx
+       apt-get update
+       apt install -y nginx-plus
+       apt install -y nginx-plus-module-geoip2 nginx-plus-module-headers-more
+       apt install -y php7.3 php7.3-cgi php7.3-bcmath php7.3-bz2 php7.3-cli php7.3-common php7.3-curl php7.3-dba php7.3-dev php7.3-enchant php7.3-fpm php7.3-gd php7.3-gmp php7.3-imap php7.3-interbase php7.3-intl php7.3-json php7.3-ldap php7.3-mbstring php7.3-mysql php7.3-odbc php7.3-opcache php7.3-pgsql php7.3-phpdbg php7.3-pspell php7.3-readline php7.3-recode php7.3-snmp php7.3-soap php7.3-sqlite3 php7.3-sybase php7.3-tidy php7.3-xml php7.3-xmlrpc php7.3-xsl php7.3-zip
+       curl -s https://raw.githubusercontent.com/theraw/web-pro/master/plus/php/7.3/fpm/www.conf > /etc/php/7.3/fpm/pool.d/www.conf
+       ex -sc '%s/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/g|x' /etc/php/7.3/fpm/php.ini
+       ex -sc '%s/output_buffering = 4096/output_buffering = Off/g|x' /etc/php/7.3/fpm/php.ini
+       perl -pi -e 's/error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT/error_reporting = E_ALL/g' /etc/php/7.3/fpm/php.ini
+       perl -pi -e 's/;error_log = syslog/error_log = php_error.log/g' /etc/php/7.3/fpm/php.ini
+       perl -pi -e 's/;date.timezone =/date.timezone = UTC/g' /etc/php/7.3/fpm/php.ini
+       service php7.0-fpm restart
+       
+       clear
+       echo 'Nginx Installation Done';
+       echo 'Php 7.3-fpm Installation Done (Running on 127.0.0.1:9003)';
+       
+       
