--- a/install
+++ b/install
@@ -38,6 +38,7 @@ fi
        perl -pi -e 's/error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT/error_reporting = E_ALL/g' /etc/php/7.3/fpm/php.ini
        perl -pi -e 's/;error_log = syslog/error_log = php_error.log/g' /etc/php/7.3/fpm/php.ini
        perl -pi -e 's/;date.timezone =/date.timezone = UTC/g' /etc/php/7.3/fpm/php.ini
+       ln -sf /etc/nginx /nginx
        service php7.0-fpm restart
        
        clear
