--- a/master/install
+++ b/master/install
@@ -1,2 +1,14 @@
 #!/bin/bash
 
+# TO-DO
+
+#1 . Install nginx
+
+
+#2 . Install Docker Composer
+curl -L https://github.com/docker/compose/releases/download/1.25.1-rc1/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
+chmod +x /usr/local/bin/docker-compose
+
+#3 . Install Php
+
+#4 . Set Up Panel
