--- a/master/install
+++ b/master/install
@@ -16,7 +16,7 @@ wget -P /etc/apt/apt.conf.d https://cs.nginx.com/static/files/90nginx
 apt-get update
 apt install -y nginx-plus
 apt install -y nginx-plus-module-geoip2 nginx-plus-module-headers-more
-
+ln -sf /etc/nginx /nginx
 # ========================================================================
 #2 . Install Docker Composer
 # ========================================================================
@@ -27,10 +27,26 @@ chmod +x /usr/local/bin/docker-compose
 #3 . Install Php
 # ========================================================================
 apt install -y php7.2 php7.2-cgi php7.2-bcmath php7.2-bz2 php7.2-cli php7.2-common php7.2-curl php7.2-dba php7.2-dev php7.2-enchant php7.2-fpm php7.2-gd php7.2-gmp php7.2-imap php7.2-interbase php7.2-intl php7.2-json php7.2-ldap php7.2-mbstring php7.2-mysql php7.2-odbc php7.2-opcache php7.2-pgsql php7.2-phpdbg php7.2-pspell php7.2-readline php7.2-recode php7.2-soap php7.2-sqlite3 php7.2-sybase php7.2-tidy php7.2-xml php7.2-xmlrpc php7.2-xsl php7.2-zip
+curl -s https://raw.githubusercontent.com/theraw/web-pro/master/master/www.conf > /etc/php/7.2/fpm/pool.d/www.conf
+ex -sc '%s/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/g|x' /etc/php/7.2/fpm/php.ini
+ex -sc '%s/output_buffering = 4096/output_buffering = Off/g|x' /etc/php/7.2/fpm/php.ini
+perl -pi -e 's/error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT/error_reporting = E_ALL/g' /etc/php/7.2/fpm/php.ini
+perl -pi -e 's/;error_log = syslog/error_log = PHP_ERRORS.log/g' /etc/php/7.2/fpm/php.ini
+perl -pi -e 's/;date.timezone =/date.timezone = UTC/g' /etc/php/7.2/fpm/php.ini
 
 # ========================================================================
-#4 . Set Up Panel
+#4 . Start Services
 # ========================================================================
+service nginx stop
+service nginx start
+service nginx restart
+service php7.2-fpm stop
+service php7.2-fpm start
+service php7.2-fpm restart
+# ========================================================================
+#5 . Set Up Panel
+# ========================================================================
+
 
 
 
